--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.16.1</version> <!-- 请根据需要选择版本 -->
         </dependency>
+        <dependency>
+            <groupId>org.languagetool</groupId>
+            <artifactId>language-en</artifactId>
+            <version>6.5</version>
+        </dependency>
     </dependencies>
 
 
