--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,27 @@
             <artifactId>jsoup</artifactId>
             <version>1.16.1</version> <!-- 请根据需要选择版本 -->
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.languagetool</groupId>-->
+<!--            <artifactId>language-en</artifactId>-->
+<!--            <version>6.5</version>-->
+<!--        </dependency>-->
         <dependency>
-            <groupId>org.languagetool</groupId>
-            <artifactId>language-en</artifactId>
-            <version>6.5</version>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>5.11.0-M1</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-console-standalone</artifactId>
+            <version>1.11.0-M1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.11.0-M1</version>
+        </dependency>
+
     </dependencies>
 
 
